# nexus-memory

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  add_providers.py  fix_all.py  fix_syntax.py  pyproject.toml  setup.sh  test_mcp.py  test_minimal.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml
docs/: cron-architecture.md
examples/: drift_demo.py  hybrid_demo.py  nexus-sica-analyzer.py  nexus_search.py
landing/: index.html  landing-server.py
landing/static/: graph-demo.js
marketing/: animated-poster.html  chatgpt-style.html  reference-style.html  server.py  static-poster.html
nexus/: __init__.py  apply.py  cli.py  confidence.py  config.py  enrich.py  events.py  export.py  lifecycle.py  staging.py
nexus/analytics/: __init__.py  clustering.py  scoring.py
nexus/discovery/: __init__.py  classifier.py  dedup.py  matcher.py
nexus/graph/: __init__.py  graph.py  schema.py  store.py
nexus/health/: __init__.py
nexus/provenance/: __init__.py
nexus/retrieval/: __init__.py
nexus/scripts/: migrate.py
nexus_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/hooks/: nexus-hooks.json
plugins/claude-code/scripts/: auto_capture.py  auto_recall.py  guardrail_check.py  session_start.py
plugins/claude-code/skills/nexus-memory/: SKILL.md
plugins/memory/nexus/: README.md  __init__.py  plugin.yaml
plugins/openclaw/: README.md  index.ts  logger.ts  openclaw.plugin.json  package.json  runtime.ts  tsconfig.json
plugins/openclaw/hooks/: capture.ts  recall.ts  trigger.ts
plugins/openclaw/lib/: config.ts  embedder.ts  qdrant-client.ts
plugins/openclaw/scripts/: install_openclaw_plugin.sh
plugins/openclaw/tools/: forget.ts  guardrail_check.ts  search.ts  store.ts
plugins/openclaw/types/: openclaw.d.ts
scripts/: install_hermes_plugin.sh  install_openclaw_plugin.sh  migrate-collections.py
src/nexus_memory/: __init__.py  embeddings.py  guardrails.py  mcp_server.py  wizard.py
tests/: conftest.py  test_analytics.py  test_apply.py  test_auto_supersession.py  test_discovery.py  test_enrich.py  test_events.py  test_export.py  test_graph.py  test_guardrails.py  test_health.py  test_hermes_plugin.py  test_lifecycle.py  test_mcp_server.py  test_nexus_init.py  test_staging.py  test_v210.py
webui/: main.py
webui/static/: index.html
webui/static/assets/: logo-animated.html
webui/static/css/: style.css
webui/static/js/: api.js  app.js  graph.js
