[project]
name = "nexus-memory"
version = "0.2.0"
description = "Universal Memory Layer for AI Agents — MCP-powered, self-hosted, secure."
authors = [{ name = "Nebojsa Kacavenda" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "qdrant-client>=1.12.0",
    "voyageai>=0.3.0",
    "networkx>=3.0",
    "bm25s>=0.1.0",
]

[project.optional-dependencies]
local = ["sentence-transformers>=3.0.0"]
all = ["sentence-transformers>=3.0.0"]

[project.scripts]
nexus-memory = "nexus_memory.mcp_server:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nexus_memory*", "nexus*"]
