[project]
name = "nexus-memory"
version = "0.2.3"
description = "Universal Memory Layer for AI Agents — MCP-powered, self-hosted, secure."
authors = [{ name = "Nebo" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "qdrant-client>=1.12.0",
    "voyageai>=0.3.0",
    "networkx>=3.0",
    "bm25s>=0.1.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
local = ["sentence-transformers>=3.0.0"]
webui = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
all = ["sentence-transformers>=3.0.0", "openai>=1.0.0", "fastapi>=0.100.0", "uvicorn>=0.20.0"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
nexus-memory = "nexus_memory.mcp_server:cli"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["nexus_memory*", "nexus*"]

[tool.pytest.ini_options]
# auto: every `async def test_...` is treated as an asyncio test
# — no need to mark them explicitly. Keeps the existing test style
# (sync tests stay sync) and lets the MCP-server tests run with
# `pytest tests/` out of the box.
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
